Refactor pipeline with extract, model, and transform folders

--- a/example/model/model.ipynb
+++ b/example/model/model.ipynb
@@ -68,8 +68,8 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.client import Client\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.model.client import Client\n",
+    "from uniflow.model.flow.flow_factory import FlowFactory\n",
     "from uniflow.config import Config\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
@@ -93,11 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "['LinearFlow',\n",
-       " 'ModelFlow',\n",
-       " 'JsonModelFlow',\n",
-       " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow']"
+       "['BaseModelFlow', 'OpenAIModelFlow', 'HuggingFaceModelFlow', 'LMQGModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -119,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:02<00:00,  1.04s/it]\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.25it/s]\n"
      ]
     }
    ],
@@ -202,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What was the weather like?\\nanswer: sunny.'],\n",
+       "{'response': ['question: What was the weather like on the sunny day?\\nanswer: sunny.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +274,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1061e8970>"
+       "<graphviz.graphs.Digraph at 0x106fe08e0>"
       ]
      },
      "metadata": {},
@@ -291,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +334,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1061e9210>"
+       "<graphviz.graphs.Digraph at 0x107a9d720>"
       ]
      },
      "metadata": {},
