--- a/example/model/openai_json_model.ipynb
+++ b/example/model/openai_json_model.ipynb
@@ -68,9 +68,8 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.client import Client\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
-    "from uniflow.model.model import ModelServerFactory\n",
+    "from uniflow.model.client import Client\n",
+    "from uniflow.model.flow.flow_factory import FlowFactory\n",
     "from uniflow.config import OpenAIConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
@@ -94,13 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "['LinearFlow',\n",
-       " 'ModelFlow',\n",
-       " 'JsonModelFlow',\n",
-       " 'OpenAIModelFlow',\n",
-       " 'OpenAIJsonModelFlow',\n",
-       " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow']"
+       "['BaseModelFlow', 'OpenAIModelFlow', 'HuggingFaceModelFlow', 'LMQGModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -216,7 +209,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.09it/s]\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.18it/s]\n"
      ]
     }
    ],
@@ -242,7 +235,7 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What is the color of the sky?',\n",
+       "   'question': 'What color was the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'No errors.'}"
       ]
@@ -312,7 +305,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10813f820>"
+       "<graphviz.graphs.Digraph at 0x10555a8f0>"
       ]
      },
      "metadata": {},
@@ -372,7 +365,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10813f370>"
+       "<graphviz.graphs.Digraph at 0x105559990>"
       ]
      },
      "metadata": {},
