--- a/example/model/openai_model.ipynb
+++ b/example/model/openai_model.ipynb
@@ -66,8 +66,8 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.client import Client\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.model.client import Client\n",
+    "from uniflow.model.flow.flow_factory import FlowFactory\n",
     "from uniflow.config import OpenAIConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.schema import Context\n",
@@ -90,13 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "['LinearFlow',\n",
-       " 'ModelFlow',\n",
-       " 'JsonModelFlow',\n",
-       " 'OpenAIModelFlow',\n",
-       " 'OpenAIJsonModelFlow',\n",
-       " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow']"
+       "['BaseModelFlow', 'OpenAIModelFlow', 'HuggingFaceModelFlow', 'LMQGModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -178,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:03<00:00,  1.54s/it]\n"
+      "100%|██████████| 2/2 [00:00<00:00,  2.19it/s]\n"
      ]
     }
    ],
@@ -224,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': [\"question: What is Bobby's occupation?\\nanswer: software engineer working on AI/ML.\"],\n",
+       "{'response': [\"question: What is Bobby's profession?\\nanswer: Talent software engineer working on AI/ML.\"],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -293,7 +287,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x111674220>"
+       "<graphviz.graphs.Digraph at 0x110e38d30>"
       ]
      },
      "metadata": {},
@@ -353,7 +347,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x110a4f970>"
+       "<graphviz.graphs.Digraph at 0x1152de740>"
       ]
      },
      "metadata": {},
