--- a/example/model/self_instruct_html_source.ipynb
+++ b/example/model/self_instruct_html_source.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from uniflow.client import Client\n",
+    "from uniflow.model.client import Client\n",
     "from uniflow.config import OpenAIConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
     "from dotenv import load_dotenv\n",
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:03<00:00,  1.07s/it]\n"
+      "100%|██████████| 3/3 [00:02<00:00,  1.14it/s]\n"
      ]
     }
    ],
@@ -218,15 +218,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.'],\n",
+       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x172c4bc70>},\n",
-       " {'output': [{'response': ['Question: How does the amount of information needed depend on the event?\\nAnswer: It depends on the degree of surprise or the abstract possibility of the event - an unusual event requires a lot of information, while a common event may not need much.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x2858cb8e0>},\n",
+       " {'output': [{'response': ['question: What does information represent in the context of describing events?\\nanswer: The degree of surprise or the abstract possibility of the event.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x172c4b8b0>},\n",
+       "  'root': <uniflow.node.node.Node at 0x2858dc1c0>},\n",
        " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x172c4be50>}]"
+       "  'root': <uniflow.node.node.Node at 0x2858cbac0>}]"
       ]
      },
      "execution_count": 10,
@@ -279,12 +279,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>How much information do the events have in terms of bits?</td>\n",
-       "      <td>The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
+       "      <td>The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Question: How does the amount of information needed depend on the event?</td>\n",
-       "      <td>Answer: It depends on the degree of surprise or the abstract possibility of the event - an unusual event requires a lot of information, while a common event may not need much.</td>\n",
+       "      <td>What does information represent in the context of describing events?</td>\n",
+       "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -296,10 +296,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                   question                                                                                                                                                                           answer\n",
-       "0                 How much information do the events have in terms of bits?                                      The events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.\n",
-       "1  Question: How does the amount of information needed depend on the event?  Answer: It depends on the degree of surprise or the abstract possibility of the event - an unusual event requires a lot of information, while a common event may not need much.\n",
-       "2             Who published A Mathematical Theory of Communication in 1948?                                                                                                                                                               Claude E. Shannon."
+       "                                                                question                                                                                    answer\n",
+       "0              How much information do the events have in terms of bits?   The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.\n",
+       "1   What does information represent in the context of describing events?                          The degree of surprise or the abstract possibility of the event.\n",
+       "2          Who published A Mathematical Theory of Communication in 1948?                                                                        Claude E. Shannon."
       ]
      },
      "execution_count": 11,
