--- a/example/pipeline/pipeline.ipynb
+++ b/example/pipeline/pipeline.ipynb
@@ -26,20 +26,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['LinearFlow',\n",
-       " 'FewShotModelFlow',\n",
-       " 'ModelFlow',\n",
-       " 'OpenAIJsonModelFlow',\n",
-       " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow',\n",
-       " 'ExtractTxtFlow']"
+       "['ExtractTxtFlow']"
       ]
      },
      "execution_count": 2,
@@ -50,7 +44,7 @@
    "source": [
     "from uniflow.pipeline import Pipeline\n",
     "from uniflow.config import PipelineConfig\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.extract.flow.flow_factory import FlowFactory\n",
     "\n",
     "FlowFactory.list()"
    ]
@@ -79,33 +73,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'filename': '../extract/data/test.txt'}\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 11781.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'filename': '../extract/data/test.txt'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 405.52it/s]\n",
-      "100%|██████████| 4/4 [00:20<00:00,  5.15s/it]\n",
-      "100%|██████████| 4/4 [00:08<00:00,  2.16s/it]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 13148.29it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 177.45it/s]\n",
+      "100%|██████████| 4/4 [00:03<00:00,  1.04it/s]\n",
+      "100%|██████████| 4/4 [00:04<00:00,  1.02s/it]\n"
      ]
     }
    ],
@@ -115,9 +89,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'output': [{'response': [\"question: What was one of the most important things you didn't understand about the world when you were a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b3cf250>},\n",
+       "  {'output': [{'response': ['question: What is the implication of the statement \"You get out what you put in\" mentioned in the context?\\nanswer: The implication is that if your product is only half as good as your competitor\\'s, you don\\'t get half as many customers, but you get no customers and go out of business.'],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b424850>},\n",
+       "  {'output': [{'response': ['question: What are some examples of superlinear returns for performance?\\nanswer: Fame, power, military victories, knowledge, and benefit to humanity.'],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b424b80>},\n",
+       "  {'output': [{'response': ['question: Why should ambitious people understand the concept of superlinear returns?\\nanswer: Because it will be the wave they surf on.'],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b424d60>}],\n",
+       " [{'output': [{'response': [\"question: What was one of the most important things you didn't understand about the world as a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b427490>},\n",
+       "  {'output': [{'response': ['question: What does the phrase \"You get out what you put in\" imply?\\nanswer: It implies that the returns are linear, meaning you get results in direct proportion to the effort you put in.'],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b424940>},\n",
+       "  {'output': [{'response': ['question: What are some examples of superlinear returns for performance?\\nanswer: Fame, power, military victories, knowledge, and benefit to humanity.'],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b4273d0>},\n",
+       "  {'output': [{'response': [\"question: Why is it important to understand the concept of superlinear returns?\\nanswer: It is important because it will be the wave you surf on if you're ambitious.\"],\n",
+       "     'error': 'No errors.'}],\n",
+       "   'root': <uniflow.node.node.Node at 0x10b424580>}]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output"
    ]
