--- a/example/server_client/server_client.ipynb
+++ b/example/server_client/server_client.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uniflow.client import Client\n",
+    "from uniflow.model.client import Client\n",
     "from uniflow.viz import Viz"
    ]
   },
