--- a/exam/server_client.ipynb
+++ b/exam/server_client.ipynb
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "from uniflow.client import Client\n",
+    "from uniflow.model.client import Client\n",
     "from uniflow.viz import Viz"
    ]
   },
