--- a/example/model/self_instruct_custom_html_source.ipynb
+++ b/example/model/self_instruct_custom_html_source.ipynb
@@ -73,7 +73,7 @@
     "import os\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "from uniflow.client import Client\n",
+    "from uniflow.model.client import Client\n",
     "from uniflow.config import OpenAIConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
@@ -213,7 +213,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:08<00:00,  2.73s/it]\n"
+      "100%|██████████| 3/3 [00:08<00:00,  2.82s/it]\n"
      ]
     }
    ],
@@ -229,21 +229,21 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.',\n",
-       "      'question': 'What is the amount of information associated with the events listed?',\n",
-       "      'answer': 'Information quantities of 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.'}],\n",
+       "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
+       "      'question': 'How many bits of information do the events have?',\n",
+       "      'answer': '0 bits, 2 bits, ~5.7 bits, and ~225.6 bits respectively.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x168ba8040>},\n",
+       "  'root': <uniflow.node.node.Node at 0x28d5bfe80>},\n",
        " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'What does information represent according to the natural idea discussed in the thought experiments?',\n",
+       "      'question': 'What does information represent based on the idea presented in the thought experiments?',\n",
        "      'answer': 'The degree of surprise or the abstract possibility of the event.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x154e2dc90>},\n",
+       "  'root': <uniflow.node.node.Node at 0x176e52d10>},\n",
        " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'What concept did Shannon introduce for the first time?',\n",
+       "      'question': 'What concept did Shannon introduce for the first time in his article?',\n",
        "      'answer': 'Shannon introduced the concept of information entropy for the first time.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x168ba8370>}]"
+       "  'root': <uniflow.node.node.Node at 0x28d5bfd60>}]"
       ]
      },
      "execution_count": 10,
@@ -296,20 +296,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.</td>\n",
-       "      <td>What is the amount of information associated with the events listed?</td>\n",
-       "      <td>Information quantities of 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.</td>\n",
+       "      <td>Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\),\\n\\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of\\ninformation respectively.</td>\n",
+       "      <td>How many bits of information do the events have?</td>\n",
+       "      <td>0 bits, 2 bits, ~5.7 bits, and ~225.6 bits respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.</td>\n",
-       "      <td>What does information represent according to the natural idea discussed in the thought experiments?</td>\n",
+       "      <td>What does information represent based on the idea presented in the thought experiments?</td>\n",
        "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.</td>\n",
-       "      <td>What concept did Shannon introduce for the first time?</td>\n",
+       "      <td>What concept did Shannon introduce for the first time in his article?</td>\n",
        "      <td>Shannon introduced the concept of information entropy for the first time.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -317,10 +317,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                                                                                                                                                                context                                                                                             question                                                                     answer\n",
-       "0                                                                                                                     Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information respectively.                                 What is the amount of information associated with the events listed?      Information quantities of 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits.\n",
-       "1  If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.  What does information represent according to the natural idea discussed in the thought experiments?           The degree of surprise or the abstract possibility of the event.\n",
-       "2                                                                                                                                      In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.                                               What concept did Shannon introduce for the first time?  Shannon introduced the concept of information entropy for the first time."
+       "                                                                                                                                                                                                                                                                                                                                                                                                context                                                                                 question                                                                     answer\n",
+       "0                                                                                                                 Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\),\\n\\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of\\ninformation respectively.                                         How many bits of information do the events have?                   0 bits, 2 bits, ~5.7 bits, and ~225.6 bits respectively.\n",
+       "1  If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.  What does information represent based on the idea presented in the thought experiments?           The degree of surprise or the abstract possibility of the event.\n",
+       "2                                                                                                                                      In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.                    What concept did Shannon introduce for the first time in his article?  Shannon introduced the concept of information entropy for the first time."
       ]
      },
      "execution_count": 11,
